--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,7 @@
                         <groupId>com.puppycrawl.tools</groupId>
                         <version>7.1</version>
                     </dependency>
+
                 </dependencies>
                 <executions>
                     <execution>
@@ -302,6 +303,14 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <profile>
